Add links to github rep and life demo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="hero">
             <h1>Padlock</h1>
             <h2>A minimalistic open source password manager</h2>
-            <a class="hero-btn alt" href="">Code</a><a class="hero-btn" href="">Try It</a>
+            <a class="hero-btn alt" href="http://github.com/maklesoft/padlock" target="_blank">Code</a><a class="hero-btn" href="http://maklesoft.github.io/padlock" target="_blank">Try It</a>
         </div>
     </body>
 </html>
