--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="hero-btn alt" href="http://github.com/maklesoft/padlock" target="_blank">Source</a><a class="hero-btn" href="http://maklesoft.github.io/padlock" target="_blank">Try It</a>
         </div>
         <div class="section subscribe" id="mc_embed_signup">
-            <div class="subscribe-text">Want to stay up to date with the development of Padlock? <strong>Subscribe to our newsletter!</strong></div>
+            <div class="subscribe-text">Want to stay up to date? <strong>Subscribe to our newsletter!</strong></div>
             <form action="http://maklesoft.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter email address"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -24,7 +24,7 @@
         <div class="section questions">
             <h2>Why use a password manager?</h2>
             <p>
-                Passwords are everywhere. You need them to access your computer, your email account and a ton of other services that you depend on. Unfortunately, passwords are a poor way of authentication. Strong passwords are hard to remember and the sheer number of different services makes it practially impossible to keep track of all of your credentials. Most people try to mitigate this by composing their passwords out of familiar things like names or birthdays, but these can be guessed easily and do not provide sufficient protection. Password reuse, which, is also wide-spread, is even more dangerous and makes a lot of people easy targets for hackers. Password managers help you keep track of your passwords by providing a secure storage that is protected by a single master password. Good password managers keep your data safe by encrypting it with a strong cipher like AES.
+                Passwords are everywhere. We need them to access our computers, our email accounts and a ton of other services that we rely on. Unfortunately, passwords are a poor way of authentication. Strong passwords are hard to remember and the sheer number of different services makes it practially impossible to keep track of all of your credentials. Most people try to mitigate this by composing their passwords out of familiar things like names or birthdays, but these can be guessed easily and do not provide sufficient protection. Password reuse, which, is also wide-spread, is even more dangerous and makes a lot of people easy targets for hackers. Password managers help you keep track of your passwords by providing a secure storage that is protected by a single master password. Good password managers keep your data safe by encrypting it with a strong cipher like AES.
             </p>
             <h2>What's so cool about Padlock?</h2>
             <p>
@@ -32,7 +32,7 @@
             </p>
             <h2>How can I use it?</h2>
             <p>
-                Padlock is based on web technologies so you can simply run it in your browser. There is a live demo available <a href="http://maklesoft.github.io/padlock" target="_blank">here</a>. However, be aware that Padlock is still in alpha phase, so use it at your own risk! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank">Github</a>. Padlock will also be available as an installable App for various platforms soon.
+                Padlock is based on web technologies so you can simply run it in your browser. There is a live demo available <a href="http://maklesoft.github.io/padlock" target="_blank">here</a>. However, be aware that Padlock is still in alpha phase, so use it at your own risk! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank">Github</a>. Padlock will also be available as an installable app for various platforms soon.
             </p>
             <h2>Why should I trust you?</h2>
             <p>
