--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
                 <strong>You don't have to!</strong> Padlock is completely open source and we actively encourage developers to inspect the source code and offer contributions. This no only makes it impossible for us to build in backdoors but also helps to identify and eliminate possible security flaws quickly and efficiently.
             </p>
         </div>
+        <div class="footer">
+            Developed and maintained by <a href="http://maklesoft.com" target="_blank">MaKleSoft</a>
+        </div>
     </body>
 </html>
