--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <div class="section questions">
             <h2>Why use a password manager?</h2>
             <p>
-                Passwords are everywhere. We need them to access our computers, our email accounts and a ton of other services that we rely on. Unfortunately, passwords are a poor way of authentication. Strong passwords are hard to remember and the sheer number of different services makes it practially impossible to keep track of all of your credentials. Most people try to mitigate this by composing their passwords out of familiar things like names or birthdays, but these can be guessed easily and do not provide sufficient protection. Password reuse, which is also wide-spread, is even more dangerous and makes a lot of people easy targets for hackers. Password managers help you keep track of your passwords by providing a secure storage that is protected by a single master password. Good password managers keep your data safe by encrypting it with a strong cipher like AES.
+                Passwords are everywhere. We need them to access our computers, our email accounts and a ton of other services that we rely on. Unfortunately, passwords are a poor way of authentication. Strong passwords are hard to remember and the sheer number of different services makes it practically impossible to keep track of all of your credentials. Most people try to mitigate this by composing their passwords out of familiar things like names or birthdays, but these can be guessed easily and do not provide sufficient protection. Password reuse, which is also wide-spread, is even more dangerous and makes a lot of people easy targets for hackers. Password managers help you keep track of your passwords by providing a secure storage that is protected by a single master password. Good password managers keep your data safe by encrypting it with a strong cipher like AES.
             </p>
             <h2>What's so cool about Padlock?</h2>
             <p>
-                We believe that software should not only be useful but also simple and fun to use. Padlock is all about simplicity and usability. We deliberately left out features that make other password managers unnecessarily complex and potentially confusing. Padlock focusses only on the most essential functionality. <strong>No clutter, no destractions</strong>. We also put a high value on transparency and actively encourage inspection and contributions by other developers.
+                We believe that software should not only be useful but also simple and fun to use. Padlock is all about simplicity and usability. We deliberately left out features that make other password managers unnecessarily complex and potentially confusing. Padlock focuses only on the most essential functionality. <strong>No clutter, no distractions</strong>. We also put a high value on transparency and actively encourage inspection and contributions by other developers.
             </p>
             <h2>How can I use it?</h2>
             <p>
@@ -59,7 +59,7 @@
             </p>
             <h2>Why should I trust you?</h2>
             <p>
-                <strong>You don't have to!</strong> Padlock is completely open source and we actively encourage developers to inspect the source code and offer contributions. This no only makes it impossible for us to build in backdoors but also helps to identify and eliminate possible security flaws quickly and efficiently.
+                <strong>You don't have to!</strong> Padlock is completely open source and we actively encourage developers to inspect the source code and offer contributions. This not only makes it impossible for us to build in back doors but also helps to identify and eliminate possible security flaws quickly and efficiently.
             </p>
         </div>
         <div class="footer">
