Add link to Chrome version

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     rendering_time: renderingTime
                 });
                 mixpanel.track_links(".source-link", "open source");
-                mixpanel.track_links(".demo-link", "open demo");
+                mixpanel.track_links(".chrome-link", "open chrome");
                 mixpanel.track_links(".maklesoft-link", "open maklesoft website");
                 mixpanel.track_forms("#mc-embedded-subscribe-form", "subscribe to newsletter");
             }
@@ -34,7 +34,7 @@
         <div class="hero">
             <h1>Padlock</h1>
             <h2>A minimalist open source password manager.</h2>
-            <a class="hero-btn alt source-link" href="http://github.com/maklesoft/padlock" target="_blank">Source</a><a class="hero-btn demo-link" href="http://maklesoft.github.io/padlock" target="_blank">Try It</a>
+            <a class="hero-btn alt source-link" href="http://github.com/maklesoft/padlock" target="_blank">Source</a><a class="hero-btn chrome-link" href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Get It</a>
         </div>
         <div class="section subscribe" id="mc_embed_signup">
             <div class="subscribe-text">Want to stay up to date? <strong>Subscribe to our newsletter!</strong></div>
@@ -55,7 +55,7 @@
             </p>
             <h2>How can I use it?</h2>
             <p>
-                Padlock is based on web technologies so you can simply run it in your browser. There is a live demo available <a href="http://maklesoft.github.io/padlock" target="_blank" class="demo-link">here</a>. However, be aware that Padlock is still in alpha phase, so use it at your own risk! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>. Padlock will also be available as an installable app for various platforms soon.
+                Padlock is now available in the <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Chrome Web Store</a>! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>. Padlock will also be available on iOS and Android soon!
             </p>
             <h2>Why should I trust you?</h2>
             <p>
