Update 'how can i use it' section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </p>
             <h2>How can I use it?</h2>
             <p>
-                Padlock is now available in the <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Chrome Web Store</a>! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>. Padlock will also be available on iOS and Android soon!
+                Padlock is now available in the <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Chrome Web Store</a> and on <a href="https://itunes.apple.com/app/id871710139" target="_blank">iOS</a> and an Android version is coming soon! If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>.
             </p>
             <h2>Why should I trust you?</h2>
             <p>
