Add information about Padlock Cloud as well as Padlock Cloud privacy policy

--- a/index.html
+++ b/index.html
@@ -106,10 +106,14 @@
             <p>
                 <strong>You don't have to!</strong> Padlock is completely open source and we actively encourage developers to inspect the source code and offer contributions. This not only makes it impossible for us to build in back doors but also helps to identify and eliminate possible security flaws quickly and efficiently.
             </p>
+            <h2>What is Padlock Cloud?</h2>
+            <p>
+                Padlock Cloud is a service that allows you to synchronize your Padlock data between multiple devices quickly and easily. You can connect to Padlock Cloud through the Padlock app simply by providing your email address. This address will then be used for authentication by sending you a confirmation link every time you want to connect one of your devices to Padlock Cloud. Padlock Cloud keeps an encrypted version of your data on our servers which can then be accessed from any device that has the Padlock app installed. Your data is encrypted and decrypted offline and never leaves your device in plain text. The encryption key used is derived from your master password which is only known by you. This means that we do not have access to your plain text data at any time. Just like Padlock, Padlock Cloud is free and completely open source. You can find the source code <a href="https://github.com/maklesoft/padlock-cloud">here</a>. For more information on how we handle your personal information, please read the <a href="privacy.html">Padlock Cloud privacy policy.</a>
+            </p>
         </div>
         <a class="source-btn source-link" href="http://github.com/maklesoft/padlock" target="_blank">Get the Source</a>
-        <div class="footer">
-            Developed and maintained by <a href="http://maklesoft.com" target="_blank" class="maklesoft-link">MaKleSoft</a>
-        </div>
+        <a href="http://maklesoft.com" target="_blank" class="maklesoft-link footer">
+            Developed and maintained by <strong>MaKleSoft</strong>
+        </a>
     </body>
 </html>
