Add preview video

--- a/index.html
+++ b/index.html
@@ -35,46 +35,8 @@
             <h1>Padlock</h1>
             <h2>A minimalist open source password manager.</h2>
             <a class="hero-btn download-link" target="_blank" id="downloadButton"></a>
+            <button class="preview-button"></button>
         </div>
-        <script>
-            (function(){
-                var iDevices = ["iPad", "iPhone", "iPod"];
-                function isIOS() {
-                    return iDevices.reduce(function(match, dev) {
-                        return match || navigator.platform.indexOf(dev) !== -1;
-                    }, false);
-                };
-
-                function isAndroid() {
-                    return navigator.userAgent.toLowerCase().indexOf("android") !== -1;
-                }
-
-                var downloadUrls = {
-                    "ios": "https://itunes.apple.com/app/id871710139",
-                    "android": "https://play.google.com/store/apps/details?id=com.maklesoft.padlock",
-                    "other": "https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif"
-                };
-
-                var buttonCaptions = {
-                    "ios": "Available on the App Store",
-                    "android": "Available on Google Play",
-                    "other": "Add to Chrome"
-                };
-
-                var platform = "other";
-                if (isIOS()) {
-                    platform = "ios";
-                } else if (isAndroid()) {
-                    platform = "android";
-                }
-
-                var button = document.getElementById("downloadButton");
-
-                button.innerHTML = buttonCaptions[platform];
-                button.href = downloadUrls[platform];
-                document.body.classList.add(platform);
-            })()
-        </script>
         <div class="section platforms">
             <p>Also available on</p>
             <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank" class="platform chrome"></a>
@@ -115,5 +77,64 @@
         <a href="http://maklesoft.com" target="_blank" class="maklesoft-link footer">
             Developed and maintained by <strong>MaKleSoft</strong>
         </a>
+
+        <div class="preview">
+            <button class="close-button">x</button>
+            <iframe src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+
+        <script>
+            (function(){
+                var iDevices = ["iPad", "iPhone", "iPod"];
+                function isIOS() {
+                    return iDevices.reduce(function(match, dev) {
+                        return match || navigator.platform.indexOf(dev) !== -1;
+                    }, false);
+                };
+
+                function isAndroid() {
+                    return navigator.userAgent.toLowerCase().indexOf("android") !== -1;
+                }
+
+                var downloadUrls = {
+                    "ios": "https://itunes.apple.com/app/id871710139",
+                    "android": "https://play.google.com/store/apps/details?id=com.maklesoft.padlock",
+                    "other": "https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif"
+                };
+
+                var buttonCaptions = {
+                    "ios": "Available on the App Store",
+                    "android": "Available on Google Play",
+                    "other": "Add to Chrome"
+                };
+
+                var platform = "other";
+                if (isIOS()) {
+                    platform = "ios";
+                } else if (isAndroid()) {
+                    platform = "android";
+                }
+
+                var button = document.getElementById("downloadButton");
+
+                button.innerHTML = buttonCaptions[platform];
+                button.href = downloadUrls[platform];
+                document.body.classList.add(platform);
+
+                var previewEl = document.querySelector(".preview");
+                var previewButton = document.querySelector(".preview-button");
+                var previewCloseButton = document.querySelector(".preview .close-button");
+                var iframe = previewEl.querySelector("iframe");
+
+                previewButton.addEventListener("click", function() {
+                    previewEl.style.display = "block";
+                    iframe.src = "https://player.vimeo.com/video/139904442?autoplay=1";
+                });
+
+                previewCloseButton.addEventListener("click", function() {
+                    previewEl.style.display = "";
+                });
+            })();
+        </script>
     </body>
 </html>
