--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Padlock - A minimalist open source password manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="logo.png"/>
         <link href="fonts/fonts.css" rel="stylesheet" type="text/css">
         <link href="styles.css" rel="stylesheet" type="text/css">
         <!-- start Mixpanel -->
