Use https instead of http where possible

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="section subscribe" id="mc_embed_signup">
             <div class="subscribe-text">Want to stay up to date? <strong>Subscribe to our newsletter!</strong></div>
-            <form action="http://maklesoft.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+            <form action="https://maklesoft.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter email address"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_156fa42cf0f141436c20b06b2_58a9450e8b" value=""></div>
@@ -62,7 +62,7 @@
             </p>
             <h2>How can I use it?</h2>
             <p>
-                Padlock is now available in the <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Chrome Web Store</a> and on <a href="https://itunes.apple.com/app/id871710139" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.maklesoft.padlock" target="_blank">Android</a>. If you want to run your own version or simply play around with the source code, the project is available on <a href="http://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>.
+                Padlock is now available in the <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank">Chrome Web Store</a> and on <a href="https://itunes.apple.com/app/id871710139" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.maklesoft.padlock" target="_blank">Android</a>. If you want to run your own version or simply play around with the source code, the project is available on <a href="https://github.com/maklesoft/padlock" target="_blank" class="source-link">Github</a>.
             </p>
             <h2>Why should I trust you?</h2>
             <p>
@@ -73,7 +73,7 @@
                 Padlock Cloud is a service that allows you to synchronize your Padlock data between multiple devices quickly and easily. You can connect to Padlock Cloud through the Padlock app simply by providing your email address. This address will then be used for authentication by sending you a confirmation link every time you want to connect one of your devices to Padlock Cloud. Padlock Cloud keeps an encrypted version of your data on our servers which can then be accessed from any device that has the Padlock app installed. Your data is encrypted and decrypted offline and never leaves your device in plain text. The encryption key used is derived from your master password which is only known by you. This means that we do not have access to your plain text data at any time. Just like Padlock, Padlock Cloud is free and completely open source. You can find the source code <a href="https://github.com/maklesoft/padlock-cloud">here</a>. For more information on how we handle your personal information, please read the <a href="privacy.html">Padlock Cloud privacy policy.</a>
             </p>
         </div>
-        <a class="source-btn source-link" href="http://github.com/maklesoft/padlock" target="_blank">Get the Source</a>
+        <a class="source-btn source-link" href="https://github.com/maklesoft/padlock" target="_blank">Get the Source</a>
         <a href="http://maklesoft.com" target="_blank" class="maklesoft-link footer">
             Developed and maintained by <strong>MaKleSoft</strong>
         </a>
